konst/tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.stderr
error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:3:15
  |
3 | const _: () = result::unwrap_or!();
  |               ^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$res:expr`
 --> src/result.rs
  |
  |     ($res:expr, $v:expr $(,)?) => {
  |      ^^^^^^^^^

error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:4:41
  |
4 | const _: () = result::unwrap_or!(Ok(()),);
  |                                         ^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$v:expr`
 --> src/result.rs
  |
  |     ($res:expr, $v:expr $(,)?) => {
  |                 ^^^^^^^

error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:6:15
  |
6 | const _: () = result::unwrap_or_else!();
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
  |
note: while trying to match meta-variable `$res:expr`
 --> src/result.rs
  |
  |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
  |      ^^^^^^^^^

error: unexpected end of macro invocation
 --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:7:47
  |
7 | const _: () = result::unwrap_or_else!(Err(()),);
  |                                               ^ missing tokens in macro arguments
  |
note: while trying to match `|`
 --> src/result.rs
  |
  |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
  |                 ^

error: expected the closure to take a pattern as an argument
 --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:8:15
  |
8 | const _: () = result::unwrap_or_else!(Err(()), || ());
  |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `result::unwrap_or_else` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:10:15
   |
10 | const _: () = result::unwrap_err_or_else!();
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:11:50
   |
11 | const _: () = result::unwrap_err_or_else!(Ok(()),);
   |                                                  ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:12:15
   |
12 | const _: () = result::unwrap_err_or_else!(Ok(()), || ());
   |               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `result::unwrap_err_or_else` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:14:23
   |
14 | const _: Option<()> = result::ok!();
   |                       ^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> src/result.rs
   |
   |     ($res:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:16:23
   |
16 | const _: Option<()> = result::err!();
   |                       ^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> src/result.rs
   |
   |     ($res:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:18:29
   |
18 | const _: Result<bool, ()> = result::map!();
   |                             ^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:19:49
   |
19 | const _: Result<bool, ()> = result::map!(Ok(()),);
   |                                                 ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:20:29
   |
20 | const _: Result<bool, ()> = result::map!(Ok(()), || false);
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `result::map` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:22:29
   |
22 | const _: Result<(), bool> = result::map_err!();
   |                             ^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:23:53
   |
23 | const _: Result<(), bool> = result::map_err!(Ok(()),);
   |                                                     ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:24:29
   |
24 | const _: Result<(), bool> = result::map_err!(Ok(()), || false);
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `result::map_err` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:26:29
   |
26 | const _: Result<(), bool> = result::and_then!();
   |                             ^^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:27:54
   |
27 | const _: Result<(), bool> = result::and_then!(Ok(()),);
   |                                                      ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:28:29
   |
28 | const _: Result<(), bool> = result::and_then!(Ok(()), || Err(false));
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `result::and_then` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:30:29
   |
30 | const _: Result<(), bool> = result::or_else!();
   |                             ^^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |      ^^^^^^^^^

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:31:53
   |
31 | const _: Result<(), bool> = result::or_else!(Ok(()),);
   |                                                     ^ missing tokens in macro arguments
   |
note: while trying to match `|`
  --> src/result.rs
   |
   |     ($res:expr, |$param:pat_param| $expr:expr $(,)?) => {
   |                 ^

error: expected the closure to take a pattern as an argument
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:32:29
   |
32 | const _: Result<(), bool> = result::or_else!(Ok(()), || Ok(()));
   |                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the macro `result::or_else` (in Nightly builds, run with -Z macro-backtrace for more info)

error: unexpected end of macro invocation
  --> tests/misc_tests/misc_macro_ui_tests/result_macro_syntax_err.rs:34:15
   |
34 | const _: () = result::unwrap!();
   |               ^^^^^^^^^^^^^^^^^ missing tokens in macro arguments
   |
note: while trying to match meta-variable `$res:expr`
  --> $CARGO/const_panic-0.2.13/src/macros/unwrapping.rs
   |
   |     ($res:expr) => {
   |      ^^^^^^^^^
